--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "vlucas/phpdotenv": "^2.2",
         "respect/validation": "^1.1",
 		"php-di/slim-bridge": "^1.0",
-        "zeuxisoo/slim-whoops": "0.5.*"
+        "zeuxisoo/slim-whoops": "0.5.*",
+		"symfony/console": "^3.1"
 	},
 	"autoload": {
 		"psr-4" : {
