--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
         "zeuxisoo/slim-whoops": "0.5.*",
 		"symfony/console": "^3.1"
 	},
+    "require-dev": {
+        "squizlabs/php_codesniffer": "2.*"
+    },
 	"autoload": {
 		"psr-4" : {
 			"App\\": "app"
