--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "respect/validation": "^1.1",
 		"php-di/slim-bridge": "^1.0",
         "zeuxisoo/slim-whoops": "0.5.*",
-		"symfony/console": "^3.1"
+		"symfony/console": "^3.1",
+		"robmorgan/phinx": "0.5.*",
+		"fzaninotto/faker": "^1.6"
 	},
     "require-dev": {
         "squizlabs/php_codesniffer": "2.*"
