--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "zeuxisoo/slim-whoops": "0.5.*",
 		"symfony/console": "^3.1",
 		"robmorgan/phinx": "0.5.*",
-		"fzaninotto/faker": "^1.6"
+		"fzaninotto/faker": "^1.6",
+		"illuminate/filesystem": "^5.3",
+		"symfony/process": "^3.1"
 	},
     "require-dev": {
         "squizlabs/php_codesniffer": "2.*"
