--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,27 @@
 {
-	"require": {
+    "require": {
         "slim/slim": "^3.0",
         "slim/csrf": "^0.6.0",
         "slim/flash": "^0.1.0",
         "slim/twig-view": "^2.1",
-        "illuminate/database": "^5.2",
-        "illuminate/pagination": "^5.2",
+        "illuminate/database": "5.2.*",
+        "illuminate/pagination": "5.2.*",
         "vlucas/phpdotenv": "^2.2",
         "respect/validation": "^1.1",
-		"php-di/slim-bridge": "^1.0",
+        "php-di/slim-bridge": "1.0.2",
         "zeuxisoo/slim-whoops": "0.5.*",
-		"symfony/console": "^3.1",
-		"robmorgan/phinx": "0.5.*",
-		"fzaninotto/faker": "^1.6",
-		"illuminate/filesystem": "^5.3",
-		"symfony/process": "^3.1"
-	},
+        "symfony/console": "^3.1",
+        "robmorgan/phinx": "0.5.*",
+        "fzaninotto/faker": "^1.6",
+        "illuminate/filesystem": "5.2.*",
+        "symfony/process": "^3.1"
+    },
     "require-dev": {
         "squizlabs/php_codesniffer": "2.*"
     },
-	"autoload": {
-		"psr-4" : {
-			"App\\": "app"
-		}
-	}
+    "autoload": {
+        "psr-4" : {
+            "App\\": "app"
+        }
+    }
 }
