--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "robmorgan/phinx": "0.5.*",
         "fzaninotto/faker": "^1.6",
         "illuminate/filesystem": "5.2.*",
-        "symfony/process": "^3.1"
+        "symfony/process": "^3.1",
+        "twig/extensions": "^1.4"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "2.*"
