--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "php-di/slim-bridge": "1.0.2",
         "zeuxisoo/slim-whoops": "0.5.*",
         "symfony/console": "^3.1",
-        "robmorgan/phinx": "0.5.*",
+        "robmorgan/phinx": "^0.5",
         "fzaninotto/faker": "^1.6",
         "illuminate/filesystem": "5.2.*",
         "symfony/process": "^3.1",
